downgrade fixed, more warnings gone